# taller3-montecarlo

./: .gitignore  README.md  pyproject.toml
mi_simulador/: __init__.py  bimodal_traffic.py  bio_pipeline.py  rag_latency.py
notebooks/: Evaluacion_Simulacion.ipynb
