[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mi_simulador"
version = "0.1.0"
description = "Librería de simulación estadística usando el Método de Montecarlo y técnicas de muestreo avanzado."
authors = [
    { name = "Juan Pablo Acevedo", email = "juan.acevedo949@pascualbravo.edu.co" }
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0"
]

[tool.setuptools]
packages = ["mi_simulador"]